# pulse

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/proc/: cpu.cpp  cpu.hpp  disk.cpp  disk.hpp  memory.cpp  memory.hpp  network.cpp  network.hpp
src/ui/: cpu_panel.cpp  cpu_panel.hpp  disk_panel.cpp  disk_panel.hpp  memory_panel.cpp  memory_panel.hpp  network_panel.cpp  network_panel.hpp
